# harper-arm-prototype-test

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
config/: arm.yaml  calibration.yaml  e2e.yaml  motions.yaml
scripts/: run_test.py
src/harper_arm/: __init__.py  arm.py  bus.py  config.py  home.py  joint.py  motion.py  motor.py  safety.py  sampling.py  status.py  trajectory.py  units.py
src/harper_arm/calibration/: __init__.py  config.py  errors.py  joints.py  motion.py  persist.py  record.py  session.py  validate.py
src/harper_arm/control_tables/: xc330.json  xl430.json  xm430.json  xm540.json
src/harper_arm/logging/: __init__.py  recorder.py  schema.py
suites/calibration/: __init__.py  backdriveable.py  helpers.py  non_backdriveable.py  operator.py  validate.py
suites/e2e/: __init__.py  config.py  operator.py
suites/motor/: __init__.py  current_no_load.py  helpers.py  ping.py  position_accuracy.py  power_on_response.py  present_temperature.py  present_voltage.py  range_of_motion.py  thermal_rise.py  velocity_tracking.py
suites/structural/: __init__.py  helpers.py  max_payload.py  operator.py  point_load.py  self_weight_hold.py
tests/: test_safety_config.py
tui/: __init__.py  app.py  catalog.py  paths.py  runner.py  settings.py  suite_catalog.py
tui/core/: __init__.py  paths.py  runner.py
tui/screens/: __init__.py  _helpers.py  home.py  pose_confirm.py  settings.py
tui/screens/suites/: __init__.py  base.py  e2e.py  fields.py  motor.py  structural.py  tests.py
tui/screens/suites/calibration/: __init__.py  controller.py  screen.py
tui/styles/: app.tcss
tui/widgets/: __init__.py  motor_status.py
