[project]
name = "harper-arm-prototype-test"
version = "0.1.0"
description = "Harper arm prototype hardware test"
readme = "README.md"
authors = [
    { name = "smpdl", email = "samipnhi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "dynamixel-controller==0.9.2",
    "pyyaml>=6.0.3",
    "setuptools<81",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
