[project]
name = "harper-arm-prototype-test"
version = "0.1.0"
description = "Harper arm prototype hardware test"
readme = "README.md"
authors = [
    { name = "smpdl", email = "samipnhi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dynamixel-controller",
    "pyyaml>=6.0.2",
    "setuptools<81",
    "textual>=8.2.7",
]

[project.scripts]
test = "tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "pytest>=8.3.0",
    "ruff>=0.15.16",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "suites", "tui", "tests", "main.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["harper_arm", "tui", "suites"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.mypy]
python_version = "3.12"
mypy_path = "src:."
explicit_package_bases = true
files = ["src", "tui", "suites", "main.py"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["dynio.*", "dynamixel_sdk.*", "textual.*", "textual.*.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tui.*", "tui.app"]
disable_error_code = ["assignment", "arg-type"]

[tool.uv.sources]
dynamixel-controller = { git = "https://github.com/smpdl/dynamixel-controller.git" }

[tool.uv.build-backend]
module-root = "src"
module-name = "harper_arm"

[tool.hatch.build.targets.wheel]
only-include = ["src/harper_arm", "tui"]

[tool.hatch.build.targets.wheel.sources]
"src/harper_arm" = "harper_arm"
"tui" = "tui"
